Correct text-align

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 body{
     background: linear-gradient(to right, rgba(230, 234, 175, 0.931),rgba(238, 252, 47, 0.5));
-    text-align: center;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -22,7 +21,6 @@ h3 {
     font-style: italic;
     text-decoration: underline;
     font-size: 150%;
-    text-align: left;
 }
 
 ul li{
@@ -36,7 +34,6 @@ ul li{
 }
 
 ol {
-    text-align: left;
     list-style: circle;
 }
 
